# books-spd2

./: pyproject.toml
books/books/: settings.py  urls.py
books/store/: admin.py  logic.py  models.py  permissions.py  serializers.py  views.py
books/store/migrations/: 0001_initial.py  0002_book_author_name.py  0003_book_owner.py  0004_userbookrelation.py  0005_auto_20230713_0833.py  0006_alter_userbookrelation_rate.py  0007_userbookrelation_bought.py  0008_book_discount.py  0009_alter_book_discount.py  0010_alter_book_discount.py  0011_alter_book_discount.py  0012_book_rating.py
books/store/tests/: test_api.py  test_logic.py  test_serializers.py
